# et-market-copilot

./: .gitignore  LICENSE  README.md  streamlit_app.py
.kiro/specs/et-investor-copilot/: design.md  requirements.md  tasks.md
backend/: .env.example  main.py  models.py  orchestrator.py  pyproject.toml
backend/agents/: alert_generator.py  backtest_engine.py  context_enricher.py  data_fetcher.py  filing_scanner.py  model_router.py  signal_detector.py
backend/db/: schema.sql
backend/demo/: scenarios.py
backend/routers/: alerts.py  analysis.py  portfolio.py
docs/: architecture.md  impact_model.md  submission_document.md
frontend/: package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/components/: AddHoldingForm.tsx  AlertCard.tsx  AuditTrailPanel.tsx  DemoScenarios.tsx  PortfolioTable.tsx  RunAnalysisButton.tsx
